# scraper

./: README.md  Untitled.ipynb  pyproject.toml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
scraper/: scraper.py
tests/: test_scraper.py
